media.css
/* All the WIDTH medias for img width size, helps image fit the selected screen 
   pixels.. */

/* TODO --Need to center dots on the image slides 
   TODO --Also need to fix image being a lil wider on 1024 x 600 desktop screen 
*/

@media screen and (width: 2560px) {
  #intro > picture > img {
    width: 148.1em;
    height: 70em;
  }

  .side-container1,
  .side-container2 {
    height: 70em;
  }
}

@media screen and (width: 1920px) {
  #intro > picture > img {
    width: 108.1em;
    height: 55em;
  }

  .side-container1,
  .side-container2 {
    height: 55em;
  }
}

@media screen and (width: 1680px) {
  #intro > picture > img {
    width: 93.1em;
    height: 50em;
  }

  .side-container1,
  .side-container2 {
    height: 50em;
  }
}

@media screen and (width: 1600px) {
  #intro > picture > img {
    width: 88.1em;
  }
}

@media screen and (width: 1536px) {
  #intro > picture > img {
    width: 84.1em;
  }
}

@media screen and (width: 1440px) {
  #intro > picture > img {
    width: 78.1em;
    height: 45em;
  }

  .side-container1,
  .side-container2 {
    height: 45em;
  }

  #dot1 {
    top: 40em;
    left: 41em;
  }
  #dot2 {
    top: 38.2em;
    left: 43em;
  }
  #dot3 {
    top: 36.4em;
    left: 45em;
  }

  .picture_end {
    top: 21em;
  }
  .right_arrow {
    margin: 305% 8.1%;
  }
}

@media screen and (width: 1366px) {
  #intro > picture > img {
    width: 73.5em;
  }

  #dot3 {
    left: 43em;
  }
  #dot2 {
    left: 41em;
  }
  #dot1 {
    left: 39em;
  }
}

@media screen and (width: 1024px) {
  #intro > picture > img {
    width: 52.1em;
  }
}

/* Medias for phone devices */
/*---------------------------*/

@media screen and (max-width: 480px) {
  div#intro.info,
  .side-container1,
  .side-container2 {
    display: none;
  }

  body {
    background-image: url("images/sonnyTest.webp");
  }
}

/* Media for rotated phone devices */

@media screen and (max-width: 896px) and (max-height: 447px) {
  div#intro.info,
  .side-container1,
  .side-container2 {
    display: none;
  }

  body {
    background-image: url("images/flower.webp");
  }
}

